# SZp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  Makefile.in  README.md  SZpConfig.cmake.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
SZp/: Makefile.am  Makefile.in
SZp/include/: hZCCLd_float.h  szp.h  szp_BytesToolkit.h  szp_CompressionToolkit.h  szp_TypeManager.h  szp_dataCompression.h  szp_defines.h  szp_double.h  szp_float.h  szp_helper.h  szp_rw.h  szp_utility.h  szpd_double.h  szpd_float.h
SZp/src/: hZCCLd_float.c  szp.c  szp.cc  szp_BytesToolkit.c  szp_CompressionToolkit.cc  szp_TypeManager.c  szp_TypeManager.cc  szp_dataCompression.c  szp_double.cc  szp_float.c  szp_float.cc  szp_helper.c  szp_helper.cc  szp_rw.c  szp_rw.cc  szp_utility.c  szpd_double.cc  szpd_float.c  szpd_float.cc
example/: Makefile.am  Makefile.in  test_multidim.cc  testfloat_compress_fastmode1  testfloat_compress_fastmode1.c  testfloat_compress_fastmode1.cc  testfloat_decompress_fastmode1  testfloat_decompress_fastmode1.c  testfloat_decompress_fastmode1.cc
